--- a/manifest.json
+++ b/manifest.json
@@ -22,5 +22,7 @@
             "type": "ïmage/png",
             "size": "144x144"
         }
-    ]
+    ],
+    "use_cache":"true",
+    "appcache_path":"cache.manifest"
 }
